--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -9,6 +9,25 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="manifest" href="/site.webmanifest" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<!-- Primary Meta Tags -->
+		<meta name="title" content="Bron chat - Doorzoek 3.5 miljoen overheidsdocumenten met AI">
+		<meta name="description" content="Doorzoek miljoenen overheidsdocumenten met AI. Een tool voor journalisten en onderzoekers, ontwikkeld door SVDJ Incubator en Open State Foundation.">
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://chat.bron.live/">
+		<meta property="og:title" content="Bron chat - Doorzoek 3.5 miljoen overheidsdocumenten met AI">
+		<meta property="og:description" content="Doorzoek miljoenen overheidsdocumenten met AI. Een tool voor journalisten en onderzoekers, ontwikkeld door SVDJ Incubator en Open State Foundation.">
+		<meta property="og:image" content="https://chat.bron.live/social-share.png">
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://chat.bron.live/">
+		<meta property="twitter:title" content="Bron chat - Doorzoek 3.5 miljoen overheidsdocumenten met AI">
+		<meta property="twitter:description" content="Doorzoek miljoenen overheidsdocumenten met AI. Een tool voor journalisten en onderzoekers, ontwikkeld door SVDJ Incubator en Open State Foundation.">
+		<meta property="twitter:image" content="https://chat.bron.live/social-share.png">
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
